--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -34,20 +34,48 @@ jobs:
             runner: macos-14
     steps:
       - uses: actions/checkout@v4
+        id: checkout
         with:
           submodules: recursive
       - name: Setup fundamental depedencies
+        id: setup-runner
         run: |
           brew install bash
       - name: Install netdata dependencies
+        id: install-nd-dep
         run: |
           export DISABLE_TELEMETRY=1
           export GITHUB_ACTIONS=true
           bash ./packaging/installer/install-required-packages.sh --dont-wait --non-interactive netdata
-      - name: Build
+      - name: Build from source
+        id: build-source
         run: |
           sudo bash ./netdata-installer.sh --install-no-prefix /usr/local/netdata --dont-wait --dont-start-it --require-cloud --one-time-build
-      - name: Test
+      - name: Test Agent start up
+        id: test-agent
         run: |
           /usr/local/netdata/usr/sbin/netdata -D > ./netdata.log 2>&1 &
           ./packaging/runtime-check.sh || exit 1
+      - name: Failure Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_COLOR: 'danger'
+          SLACK_FOOTER: ''
+          SLACK_ICON_EMOJI: ':github-actions:'
+          SLACK_TITLE: 'Build matrix preparation failed:'
+          SLACK_USERNAME: 'GitHub Actions'
+          SLACK_MESSAGE: |-
+              ${{ github.repository }}: Failed to prepare build matrix for build checks.
+              Checkout: ${{ steps.checkout.outcome }}
+              Setup runner: ${{ steps.setup-runner.outcome }}
+              Install netdata required packages: ${{ steps.install-nd-dep.outcome }}
+              Build from source: ${{ steps.build-source.outcome }}
+              Test Agent runtime: ${{ steps.test-agent.outcome }}
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: >-
+          ${{
+            failure()
+            && startsWith(github.ref, 'refs/heads/master')
+            && github.event_name != 'pull_request'
+            && github.repository == 'netdata/netdata'
+          }}
