fix nginx in net_listeners.conf

--- a/src/go/collectors/go.d.plugin/config/go.d/sd/net_listeners.conf
+++ b/src/go/collectors/go.d.plugin/config/go.d/sd/net_listeners.conf
@@ -67,7 +67,7 @@ classify:
       - tags: "mysql"
         expr: '{{ and (eq .Port "3306") (eq .Comm "mysqld" "mariadb") }}'
       - tags: "nginx"
-        expr: '{{ and (eq .Port "80" "8080") (eq .Comm "nginx") }}'
+        expr: '{{ and (eq .Port "80" "8080") (eq .Comm "nginx" "nginx:") }}'
       - tags: "ntpd"
         expr: '{{ and (eq .Port "123") (eq .Comm "ntpd") }}'
       - tags: "openvpn"
