--- a/src/go/collectors/go.d.plugin/config/go.d/sd/net_listeners.conf
+++ b/src/go/collectors/go.d.plugin/config/go.d/sd/net_listeners.conf
@@ -280,7 +280,7 @@ compose:
         template: |
           module: nginx
           name: local
-          url: http://localhost:{{.Port}}/basic_status
+          url: http://localhost:{{.Port}}/stub_status
       - selector: "ntpd"
         template: |
           module: ntpd
