Disable ASAN for Abseil and Protobuf when vendoring them.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -205,6 +205,11 @@ if(ENABLE_BUNDLED_PROTOBUF AND NEED_PROTOBUF)
         set(NETDATA_FETCHCONTENT_TRY_FIND_PACKAGE_MODE "${FETCHCONTENT_TRY_FIND_PACKAGE_MODE}")
         set(FETCHCONTENT_TRY_FIND_PACKAGE_MODE NEVER)
 
+        set(NETDATA_CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
+        set(NETDATA_CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+        string(REPLACE "-fsanitize=address" "" CMAKE_C_FLAGS ${CMAKE_C_FLAGS})
+        string(REPLACE "-fsanitize=address" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
+
         # ignore debhelper
         set(FETCHCONTENT_FULLY_DISCONNECTED Off)
 
@@ -235,6 +240,8 @@ if(ENABLE_BUNDLED_PROTOBUF AND NEED_PROTOBUF)
         message(STATUS "Finished preparing bundled Protobuf.")
 
         set(FETCHCONTENT_TRY_FIND_PACKAGE_MODE "${NETDATA_FETCHCONTENT_TRY_FIND_PACKAGE_MODE}")
+        set(CMAKE_C_FLAGS "${NETDATA_CMAKE_C_FLAGS}")
+        set(CMAKE_CXX_FLAGS "${NETDATA_CMAKE_CXX_FLAGS}")
 endif()
 
 #
