--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -100,6 +100,7 @@ jobs:
         id: install-bash
         if: needs.file-check.outputs.run == 'true'
         run: |
+          brew update
           brew install bash
       - name: Install netdata dependencies
         id: install-nd-dep
