--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -45,6 +45,7 @@ apps:
     command: opt/netdata/bin/netdata -u root -P /opt/netdata/var/run/netdata.pid -D
     daemon: simple
     plugs:
+      - login-session-observe
       - network
       - network-bind
   claim:
