Add plug for mount points metrics

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -46,6 +46,7 @@ apps:
     daemon: simple
     plugs:
       - login-session-observe
+      - mount-observe
       - network
       - network-bind
   claim:
