Add plug for various system metrics
This includes many `disk.*` metrics, cpu and memory pressure,
`system.io`.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -49,6 +49,7 @@ apps:
       - mount-observe
       - network
       - network-bind
+      - system-observe
   claim:
     command: opt/netdata/bin/netdata-claim.sh
     plugs:
