Add plug for network connections function

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -47,6 +47,7 @@ apps:
     plugs:
       - login-session-observe
       - mount-observe
+      - network-observe
       - network
       - network-bind
       - system-observe
