Add snap for various network metrics
This includes `ip.*`, `ipv4.*`, `ipv6.*`, `wireless.*` and
`netfilter.conntrack_sockets`.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -48,6 +48,7 @@ apps:
       - login-session-observe
       - mount-observe
       - network-observe
+      - network-setup-observe
       - network
       - network-bind
       - system-observe
