Add plug for access to cgroups
This enables `cgroups.plugin` to access unified cgroups files in
`/sys/fs/cgroup` and emit metrics for cgroups of various kinds,
including systemd services.

Note that systemd user slices (and their child slices) are disabled by
default by the plugin.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -46,6 +46,7 @@ apps:
     daemon: simple
     plugs:
       - docker-support
+      - kubernetes-support
       - login-session-observe
       - mount-observe
       - network-observe
