Don’t prepend system include paths.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1587,7 +1587,7 @@ endif()
 pkg_check_modules(LIBBROTLI libbrotlidec libbrotlienc libbrotlicommon)
 if(LIBBROTLI_FOUND)
         set(ENABLE_BROTLI On)
-        target_include_directories(libnetdata BEFORE PUBLIC ${LIBBROTLI_INCLUDE_DIRS})
+        target_include_directories(libnetdata PUBLIC ${LIBBROTLI_INCLUDE_DIRS})
         target_compile_definitions(libnetdata PUBLIC ${LIBBROTLI_CFLAGS_OTHER})
         target_link_libraries(libnetdata PUBLIC ${LIBBROTLI_LDFLAGS})
 endif()
