Minor CMake restructure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1489,8 +1489,10 @@ set_source_files_properties(JudyLTables.c PROPERTIES COMPILE_OPTIONS "-I${CMAKE_
 # build libnetdata
 #
 
-include(NetdataDetectSystemd)
-detect_systemd()
+if(LINUX)
+        include(NetdataDetectSystemd)
+        detect_systemd()
+endif()
 
 add_library(libnetdata STATIC ${LIBNETDATA_FILES})
 
