--- a/integrations/cloud-notifications/metadata.yaml
+++ b/integrations/cloud-notifications/metadata.yaml
@@ -545,7 +545,7 @@
 
         Netdata webhook integration service will send alert and reachability notifications to the destination service as soon as they are detected.
 
-        For alert notifications, the content forwarded to the destination service comprises a JSON object featuring the following properties:
+        For alert notifications, the content sent to the destination service contains a JSON object with the following properties:
 
         | field   | type   | description |
         | :--     | :--    | :--         |
@@ -565,7 +565,7 @@
         | additional_active_warning_alerts | integer | Number of additional warning alerts currently existing on the same node. |
         | alarm_url | string | Netdata Cloud URL for this alarm. |
 
-        For reachability notifications, the JSON object would contain the following properties:
+        For reachability notifications, the JSON object will contain the following properties:
 
         | field   | type   | description |
         | :--     | :--    | :--         |
