--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,9 +5,9 @@
 * @Ferroin
 
 # Ownership by directory structure
-.github/ @Ferroin @tkatsoulas
+.github/ @Ferroin
 src/aclk/ @stelfrag
-contrib/debian @Ferroin @tkatsoulas
+contrib/debian @Ferroin
 src/collectors/ @thiagoftsm
 src/collectors/ebpf.plugin/ @thiagoftsm
 src/collectors/charts.d.plugin/ @ilyam8 @Ferroin
@@ -18,36 +18,36 @@ src/collectors/cups.plugin/ @thiagoftsm
 src/exporting/ @thiagoftsm
 src/daemon/ @thiagoftsm @vkalintiris
 src/database/ @thiagoftsm @vkalintiris
-docs/ @tkatsoulas @Ancairon
+docs/ @Ancairon
 src/go/ @ilyam8
 src/health/ @thiagoftsm @vkalintiris
 src/health/health.d/ @thiagoftsm
 src/health/notifications/ @Ferroin @thiagoftsm
 src/ml/ @vkalintiris
 src/libnetdata/ @thiagoftsm @vkalintiris
-packaging/ @Ferroin @tkatsoulas
+packaging/ @Ferroin
 packaging/cmake @Ferroin @vkalintiris
 src/registry/ @novykh
 src/streaming/ @thiagoftsm
-system/ @Ferroin @tkatsoulas
-tests/ @Ferroin @vkalintiris @tkatsoulas
+system/ @Ferroin
+tests/ @Ferroin @vkalintiris
 src/web/ @thiagoftsm @vkalintiris
 src/web/gui/ @novykh
 src/logsmanagement/ @thiagoftsm
 
 # Ownership by filetype (overwrites ownership by directory)
-*.md @tkatsoulas @Ancairon
-*.mdx @tkatsoulas @Ancairon
-Dockerfile* @Ferroin @tkatsoulas
+*.md @Ancairon
+*.mdx @Ancairon
+Dockerfile* @Ferroin
 
 # Ownership of specific files
-.gitignore @Ferroin @tkatsoulas @vkalintiris
-.codacy.yml @Ferroin @tkatsoulas
-.yamllint.yml @Ferroin @tkatsoulas
+.gitignore @Ferroin @vkalintiris
+.codacy.yml @Ferroin
+.yamllint.yml @Ferroin
 CMakeLists.txt @Ferroin @vkalintiris
-netdata.spec.in @Ferroin @tkatsoulas
-netdata-installer.sh @Ferroin @tkatsoulas
-packaging/version @netdatabot @Ferroin @tkatsoulas
+netdata.spec.in @Ferroin
+netdata-installer.sh @Ferroin
+packaging/version @netdatabot @Ferroin
 
-LICENSE.md @Ferroin @tkatsoulas @vkalintiris
-CHANGELOG.md @netdatabot @Ferroin @tkatsoulas
+LICENSE.md @Ferroin @vkalintiris
+CHANGELOG.md @netdatabot @Ferroin
