--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,9 +5,9 @@
 * @Ferroin
 
 # Ownership by directory structure
-.github/ @Ferroin
+.github/ @netdata/agent-sre
 src/aclk/ @stelfrag
-contrib/debian @Ferroin
+contrib/debian @netdata/agent-sre
 src/collectors/ @thiagoftsm
 src/collectors/ebpf.plugin/ @thiagoftsm
 src/collectors/charts.d.plugin/ @ilyam8 @Ferroin
@@ -25,12 +25,12 @@ src/health/health.d/ @thiagoftsm
 src/health/notifications/ @Ferroin @thiagoftsm
 src/ml/ @vkalintiris
 src/libnetdata/ @thiagoftsm @vkalintiris
-packaging/ @Ferroin
+packaging/ @netdata/agent-sre
 packaging/cmake @Ferroin @vkalintiris
 src/registry/ @novykh
 src/streaming/ @thiagoftsm
-system/ @Ferroin
-tests/ @Ferroin @vkalintiris
+system/ @netdata/agent-sre
+tests/ @netdata/agent-sre @vkalintiris
 src/web/ @thiagoftsm @vkalintiris
 src/web/gui/ @novykh
 src/logsmanagement/ @thiagoftsm
@@ -38,16 +38,16 @@ src/logsmanagement/ @thiagoftsm
 # Ownership by filetype (overwrites ownership by directory)
 *.md @Ancairon
 *.mdx @Ancairon
-Dockerfile* @Ferroin
+Dockerfile* @netdata/agent-sre
 
 # Ownership of specific files
-.gitignore @Ferroin @vkalintiris
-.codacy.yml @Ferroin
-.yamllint.yml @Ferroin
-CMakeLists.txt @Ferroin @vkalintiris
-netdata.spec.in @Ferroin
-netdata-installer.sh @Ferroin
-packaging/version @netdatabot @Ferroin
+.gitignore @netdata/agent-sre @vkalintiris
+.codacy.yml @netdata/agent-sre
+.yamllint.yml @netdata/agent-sre
+CMakeLists.txt @netdata/agent-sre @vkalintiris
+netdata.spec.in @netdata/agent-sre
+netdata-installer.sh @netdata/agent-sre
+packaging/version @netdatabot @netdata/agent-sre
 
-LICENSE.md @Ferroin @vkalintiris
-CHANGELOG.md @netdatabot @Ferroin
+LICENSE.md @netdata/agent-sre @vkalintiris
+CHANGELOG.md @netdatabot @netdata/agent-sre
