address_swap: Add skel avoiding compilation warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1889,6 +1889,23 @@ if(ENABLE_PLUGIN_EBPF)
             src/collectors/ebpf.plugin/ebpf_unittest.h
             src/collectors/ebpf.plugin/ebpf_functions.c
             src/collectors/ebpf.plugin/ebpf_functions.h
+            src/libnetdata/ebpf/includes/cachestat.skel.h
+            src/libnetdata/ebpf/includes/dc.skel.h
+            src/libnetdata/ebpf/includes/disk.skel.h
+            src/libnetdata/ebpf/includes/fd.skel.h
+            src/libnetdata/ebpf/includes/filesystem.skel.h
+            src/libnetdata/ebpf/includes/hardirq.skel.h
+            src/libnetdata/ebpf/includes/mdflush.skel.h
+            src/libnetdata/ebpf/includes/mount.skel.h
+            src/libnetdata/ebpf/includes/networkviewer.skel.h
+            src/libnetdata/ebpf/includes/oomkill.skel.h
+            src/libnetdata/ebpf/includes/process.skel.h
+            src/libnetdata/ebpf/includes/shm.skel.h
+            src/libnetdata/ebpf/includes/socket.skel.h
+            src/libnetdata/ebpf/includes/softirq.skel.h
+            src/libnetdata/ebpf/includes/swap.skel.h
+            src/libnetdata/ebpf/includes/sync.skel.h
+            src/libnetdata/ebpf/includes/vfs.skel.h
     )
 
     add_executable(ebpf.plugin ${EBPF_PLUGIN_FILES})
