--- a/integrations/cloud-authentication/metadata.yaml
+++ b/integrations/cloud-authentication/metadata.yaml
@@ -20,7 +20,7 @@
       - An Okta account
       - A Netdata Cloud account
       - Access to the Space as an administrator
-      - Space needs to be on Business plan or higher
+      - Space needs to be on the Business plan or higher
 
       ### Setting up Okta
       Steps needed to be done on Okta Admin Portal:
@@ -28,7 +28,7 @@
       2. Find Netdata's preconfigured app for easy setup and click **Add Integration**
       3. Give the app, that will be in your apps dashboard, the preferred **Application label** and click **Next** to move to the Sign-On options tab
       4. In the **Sign-On Options** all the values we expect are already filled and no additional data is required
-      5. Click **Done**. You are able able to go back and edit any fields later if need be
+      5. Click **Done**. You are able to go back and edit any fields later if need be
       6. Go to the **Assignments** tab and enter the People or Group assignments as per your organization’s policies
 
       ### Netdata Configuration Steps
