--- a/integrations/cloud-authentication/metadata.yaml
+++ b/integrations/cloud-authentication/metadata.yaml
@@ -35,8 +35,7 @@
       1. Click on the Space settings cog (located above your profile icon)
       2. Click on the **Authentication** tab
       3. On the Okta SSO card, click on **Configure**
-      4. Fill in the required credentials, you get them from **Okta Admin Portal**:
+      4. Fill in the [required credentials](https://developer.okta.com/docs/guides/find-your-app-credentials/main/), you get them from **Okta Admin Portal**:
           - **Issuer URL** you can get it from your profile icon on top, e.g. `https://company-name.okta.com`
           - **Client ID** you can get it from **General** tab on application you configured on Okta
           - **Client Secret** you can get it from **General** tab on application you configured on Okta
-          Note: [Okta - Find your application credentials](https://developer.okta.com/docs/guides/find-your-app-credentials/main/)
