Move vendoring of Sentry to it’s own module.
Also, switch to pulling from the git repo instead of the release URL, as
it’s more reliable, less prone to potential tampering, and also more
consistent with all of our other vendoring.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -276,11 +276,19 @@ endif()
 
 include(NetdataYAML)
 
+if(ENABLE_SENTRY)
+        include(NetdataSentry)
+endif()
+
 #
 # Checks from custom modules
 #
 
 netdata_detect_libyaml()
+
+if(ENABLE_SENTRY)
+        netdata_bundle_sentry()
+endif()
 
 #
 # check include files
