--- a/src/health/health.d/zfs.conf
+++ b/src/health/health.d/zfs.conf
@@ -58,7 +58,7 @@ component: File system
      crit: $this > (($status >= $WARNING ) ? (90) : (98))
     delay: down 1m multiplier 1.5 max 1h
   summary: ZFS pool ${label:pool} space utilization
-     info: ZFS pool ${label:pool} space utilization
+     info: ZFS pool **${label:pool}** is nearing capacity. Current space usage is above the threshold.
        to: sysadmin
 
  template: zfs_pool_health_state_warn
