--- a/src/health/health.d/megacli.conf
+++ b/src/health/health.d/megacli.conf
@@ -1,4 +1,57 @@
 
+
+## go.d/megacli
+
+## Adapters (controllers)
+
+ template: megacli_adapter_health_state
+       on: megacli.adapter_health_state
+    class: Errors
+     type: System
+component: RAID
+   lookup: average -1m unaligned percentage of optimal
+    units: %
+    every: 10s
+     crit: $this < 100
+    delay: down 5m multiplier 2 max 10m
+  summary: MegaCLI Adapter ${label:adapter_number} health state
+     info: MegaCLI Adapter ${label:adapter_number} is in the degraded state
+       to: sysadmin
+
+## Physical Drives
+
+ template: megacli_phys_drive_media_errors
+       on: megacli.phys_drive_media_errors_rate
+    class: Errors
+     type: System
+component: RAID
+   lookup: sum -10s
+    units: media errors
+    every: 10s
+     warn: $this > 0
+    delay: up 1m down 5m multiplier 2 max 10m
+  summary: MegaCLI physical drive errors
+     info: MegaCLI physical drive adapter ${label:adapter_number} slot ${label:slot_number} media errors
+       to: sysadmin
+
+ template: megacli_phys_drive_predictive_failures
+       on: megacli.pd_predictive_failure
+    class: Errors
+     type: System
+component: RAID
+   lookup: sum -10s
+    units: predictive failures
+    every: 10s
+     warn: $this > 0
+    delay: up 1m down 5m multiplier 2 max 10m
+  summary: MegaCLI physical drive predictive failures
+     info: Number of physical drive predictive failures
+       to: sysadmin
+
+## --------------------------------------------------------------------------------------------------------------------
+
+## python.d/megacli
+
 ## Adapters (controllers)
 
  template: megacli_adapter_state
