--- a/src/health/health.d/megacli.conf
+++ b/src/health/health.d/megacli.conf
@@ -1,8 +1,8 @@
+# you can disable an alarm notification by setting the 'to' line to: silent
 
+# go.d/megacli
 
-## go.d/megacli
-
-## Adapters (controllers)
+# Adapters (controllers)
 
  template: megacli_adapter_health_state
        on: megacli.adapter_health_state
@@ -14,11 +14,9 @@ component: RAID
     every: 10s
      crit: $this < 100
     delay: down 5m multiplier 2 max 10m
-  summary: MegaCLI Adapter ${label:adapter_number} health state
-     info: MegaCLI Adapter ${label:adapter_number} is in the degraded state
+  summary: MegaCLI adapter ${label:adapter_number} health
+     info: MegaCLI adapter ${label:adapter_number} is in the degraded state
        to: sysadmin
-
-## Physical Drives
 
  template: megacli_phys_drive_media_errors
        on: megacli.phys_drive_media_errors_rate
@@ -30,29 +28,59 @@ component: RAID
     every: 10s
      warn: $this > 0
     delay: up 1m down 5m multiplier 2 max 10m
-  summary: MegaCLI physical drive errors
+  summary: MegaCLI PD adapter ${label:adapter_number} slot ${label:slot_number} media errors
      info: MegaCLI physical drive adapter ${label:adapter_number} slot ${label:slot_number} media errors
        to: sysadmin
 
+# Physical Drives
+
  template: megacli_phys_drive_predictive_failures
-       on: megacli.pd_predictive_failure
+       on: megacli.phys_drive_predictive_failures
     class: Errors
      type: System
 component: RAID
    lookup: sum -10s
-    units: predictive failures
+    units: media errors
     every: 10s
      warn: $this > 0
     delay: up 1m down 5m multiplier 2 max 10m
-  summary: MegaCLI physical drive predictive failures
-     info: Number of physical drive predictive failures
+  summary: MegaCLI PD adapter ${label:adapter_number} slot ${label:slot_number} predictive failures
+     info: MegaCLI physical drive (adapter ${label:adapter_number} slot ${label:slot_number}) predictive failures
        to: sysadmin
 
-## --------------------------------------------------------------------------------------------------------------------
+# Backup Battery Unit
 
-## python.d/megacli
+ template: megacli_bbu_charge
+       on: megacli.bbu_charge
+    class: Workload
+     type: System
+component: RAID
+   lookup: average -10s
+    units: percent
+    every: 10s
+     warn: $this <= (($status >= $WARNING)  ? (85) : (80))
+     crit: $this <= (($status == $CRITICAL)  ? (50) : (40))
+  summary: MegaCLI BBU charge
+     info: MegaCLI Backup Battery Unit (adapter ${label:adapter_number}) average charge over the last minute
+       to: sysadmin
 
-## Adapters (controllers)
+ template: megacli_bbu_recharge_cycles
+       on: megacli.bbu_recharge_cycles
+    class: Workload
+     type: System
+component: RAID
+   lookup: average -10s
+    units: cycles
+    every: 10s
+     warn: $this >= 100
+     crit: $this >= 500
+  summary: MegaCLI BBU recharge cycles
+     info: MegaCLI Backup Battery Unit (adapter ${label:adapter_number}) recharge cycles
+       to: sysadmin
+
+# --------------------------------------------------------------------------------------------------------------------
+
+# python.d/megacli
 
  template: megacli_adapter_state
        on: megacli.adapter_degraded
@@ -67,8 +95,6 @@ component: RAID
   summary: MegaCLI adapter state
      info: Adapter is in the degraded state (0: false, 1: true)
        to: sysadmin
-
-## Physical Disks
 
  template: megacli_pd_predictive_failures
        on: megacli.pd_predictive_failure
@@ -97,8 +123,6 @@ component: RAID
   summary: MegaCLI physical drive errors
      info: Number of physical drive media errors
        to: sysadmin
-
-## Battery Backup Units (BBU)
 
  template: megacli_bbu_relative_charge
        on: megacli.bbu_relative_charge
