--- a/packaging/cmake/config.cmake.h.in
+++ b/packaging/cmake/config.cmake.h.in
@@ -12,6 +12,8 @@
 #cmakedefine COMPILED_FOR_FREEBSD
 #cmakedefine COMPILED_FOR_LINUX
 #cmakedefine COMPILED_FOR_MACOS
+#cmakedefine COMPILED_FOR_CYGWIN
+#cmakedefine COMPILED_FOR_FOREIGN_OS
 
 // checked headers
 
