--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,7 +234,7 @@ elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
         set(LINUX True)
         set(COMPILED_FOR_LINUX True)
         add_definitions(-D_GNU_SOURCE)
-elseif(${CMAKE_SYSTEM_NAME} MATCHES "Cygwin")
+elseif(${CMAKE_SYSTEM_NAME} MATCHES "CYGWIN")
         set(CYGWIN True)
         set(COMPILED_FOR_CYGWIN True)
 else()
