fix cmake variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,22 +221,24 @@ set(LINUX   False)
 set(FREEBSD False)
 set(MACOS   False)
 
-if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
         set(MACOS True)
         set(COMPILED_FOR_MACOS True)
-
         find_library(IOKIT IOKit)
         find_library(FOUNDATION Foundation)
-elseif(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "FreeBSD")
         set(FREEBSD True)
         set(COMPILED_FOR_FREEBSD True)
-elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
         set(LINUX True)
         set(COMPILED_FOR_LINUX True)
         add_definitions(-D_GNU_SOURCE)
-elseif(${CMAKE_SYSTEM_NAME} MATCHES "CYGWIN")
+elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "CYGWIN")
         set(CYGWIN True)
         set(COMPILED_FOR_CYGWIN True)
+elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "MSYS")
+        set(MSYS True)
+        set(COMPILED_FOR_MSYS True)
 else()
         set(FOREIGN_OS True)
         set(COMPILED_FOR_FOREIGN_OS True)
