--- a/packaging/cmake/config.cmake.h.in
+++ b/packaging/cmake/config.cmake.h.in
@@ -13,6 +13,7 @@
 #cmakedefine COMPILED_FOR_LINUX
 #cmakedefine COMPILED_FOR_MACOS
 #cmakedefine COMPILED_FOR_CYGWIN
+#cmakedefine COMPILED_FOR_MSYS
 #cmakedefine COMPILED_FOR_FOREIGN_OS
 
 // checked headers
