Simplify CMake handling of CUPS.
CMake itself provides a Find module that works in almost all cases, so
use that instead of the complex dance of trying to fight with pkg-config
and cups-config.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1799,36 +1799,16 @@ if(ENABLE_PLUGIN_LOGS_MANAGEMENT)
 endif()
 
 if(ENABLE_PLUGIN_CUPS)
-    pkg_check_modules(CUPS libcups)
-    if(NOT CUPS_LIBRARIES)
-        pkg_check_modules(CUPS cups)
-        if(NOT CUPS_LIBRARIES)
-                find_program(CUPS_CONFIG cups-config)
-                if(CUPS_CONFIG)
-                        execute_process(COMMAND ${CUPS_CONFIG} --api-version OUTPUT_VARIABLE CUPS_API_VERSION OUTPUT_STRIP_TRAILING_WHITESPACE)
-                        if(CUPS_API_VERSION VERSION_LESS "1.7")
-                                set(CUPS_FOUND False)
-                        else()
-                                execute_process(COMMAND ${CUPS_CONFIG} --cflags OUTPUT_VARIABLE CUPS_CFLAGS_OTHER OUTPUT_STRIP_TRAILING_WHITESPACE)
-                                execute_process(COMMAND ${CUPS_CONFIG} --libs OUTPUT_VARIABLE CUPS_LIBRARIES OUTPUT_STRIP_TRAILING_WHITESPACE)
-                                set(CUPS_FOUND True)
-                        endif()
-                endif()
-        endif()
-    endif()
+    find_package(CUPS REQUIRED)
 
-    if(NOT CUPS_FOUND)
-        message(WARNING "Could not find cups cflags and libs.")
-    else()
-        set(CUPS_PLUGIN_FILES src/collectors/cups.plugin/cups_plugin.c)
-        add_executable(cups.plugin ${CUPS_PLUGIN_FILES})
-        target_link_libraries (cups.plugin libnetdata ${CUPS_LIBRARIES})
-        target_compile_options(cups.plugin PRIVATE ${CUPS_CFLAGS_OTHER})
+    set(CUPS_PLUGIN_FILES src/collectors/cups.plugin/cups_plugin.c)
+    add_executable(cups.plugin ${CUPS_PLUGIN_FILES})
+    target_link_libraries(cups.plugin libnetdata ${CUPS_LIBRARIES})
+    target_include_directories(cups.plugin PRIVATE ${CUPS_INCLUDE_DIRS})
 
-        install(TARGETS cups.plugin
-                COMPONENT cups_plugin
-                DESTINATION usr/libexec/netdata/plugins.d)
-    endif()
+    install(TARGETS cups.plugin
+            COMPONENT cups_plugin
+            DESTINATION usr/libexec/netdata/plugins.d)
 endif()
 
 set(NDSUDO_FILES src/collectors/plugins.d/ndsudo.c)
